<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">中粮创意</string>
    <string name="home_title">首页</string>
    <string name="innovation_title">发创意</string>
    <string name="more">更多</string>
    <string name="username">username</string>
    <!-- <string name="app_host">http://10.6.4.101/index.php?g=api</string> -->
    <!--<string name="app_host">http://idea.cofco.com/index.php?g=api</string>-->
    <string name="app_host">http://192.168.2.123:8080</string>
    <string name="addCreative">addCreative</string>
    <string name="login">/user/loginbypwd.do</string>
    <string name="regist">regist</string>
    <string name="square_title">创意广场</string>
    <string name="square_ranking_title">排行榜</string>
    <string name="version_num">andriodVersionNumber</string>
    <string name="current_version">当前版本:1.01</string>
    <string name="userinfo">userinfo</string>
    <!--<string name="creative_list">creativeList</string>-->
    <string name="creative_list">/main/getCreateList</string>
    <string name="creative_square">creativeSquare</string>
    <string name="net_error">当前网络不可用，请先检查您的网络</string>
    <string name="soft_update_no">已经是最新版本!</string>
    <string name="soft_update_title">软件更新</string>
    <string name="soft_update_info">检测到新版本，立即更新吗</string>
    <string name="soft_update_updatebtn">更新</string>
    <string name="soft_update_later">稍后更新</string>
    <string name="soft_updating">正在更新</string>
    <string name="soft_update_cancel">取消</string>
    <string name="Loading">正在加载</string>
    <string name="search_hint">搜索热门分类</string>
    <string name="user_exit">退出登录</string>
    <string name="user_setting">设置</string>
    <string name="my_innovation">我的创意</string>
    <string name="my_message">我的消息</string>
    <string name="my_favorite">我的收藏</string>
    <string name="net_errors">请检查您的网络连接！</string>
    <string name="center_me">我</string>
    <string name="about_us">关于我们</string>
    <string name="app_update">软件升级</string>
    <string name="idea_feedback">意见反馈</string>
    <string name="fragment1">Tab1</string>
    <string name="fragment2">Tab2</string>
    <string name="fragment3">Tab3</string>
    <string name="ranking">ThatPast</string>
    <string name="square_no_ranking_text">当前还没有排行榜啊!</string>
    <string name="set_date">Set Date</string>
    <string name="about_us_content">中粮营养健康研究院是中粮集团深入贯彻落实中央建设创新型国家战略部署，
   	     加快引进海外高层次人才，加大科技创新力度，打造具有国际水准的全产业链粮油食品企业而在北京未来科技城建设的世界一流的人才创新创业基地。
     	   中粮营养健康研究院立足生命科学、致力营养健康，以客户为导向，科技支撑产业链、研发创新好产品，引领中国人的饮食生活方式，
     	   最终达到促进全民健康，提高中国人寿命的目的。 
        中粮营养健康研究院邀请国际著名建设设计公司进行设计，充分考虑了未来、营养、健康、绿色、低碳、人文、可持续发展以及研发人员实际需求等因素，使园区充满着生命元素，建成后的中粮营养健康研究院必将成为北京未来科技城内一个标志性的高端研发园区，凸显中粮集团未来研发创新的生机与活力。 中粮营养健康研究院以打造具有国际水准的全产业链粮油食品企业战略为指导，确立了“立足生命科学，致力营养健康；服务产业链，研发好产品”的使命和“创新超越客户诉求，科技引领健康中国”的愿景。 中粮营养健康研究院是中国人的生命科学研究院，必将推动全产业链战略实施和向关注消费者和客户需求的品牌食品企业转型，使中粮集团成为一个创新驱动型的公司。 创新超越客户诉求，科技引领健康中国！让我们翻开新的篇章，共同见证辉煌！</string>
    <string name="share_message">欢迎使用中粮创意收集系统，点击以下链接，安装中粮创意app。期待您参与创意投递活动，激发创新的火花！</string>
    <string name="votable_text">可投票</string>
    <string name="un_votable">不可投票</string>
    <string name="voted_text">已投票</string>
    <string name="unvotable">此创意不在投票期间</string>
    <string name="vote_text">投票</string>
    <string name="praise_text">赞</string>
    <string name="keyword">请输入查询的关键字!</string>
    <string name="praised_text">您已赞过</string>
    <string name="favorite_text">收藏</string>
    <string name="idea_hint">描述你的创意吧...</string>
    <string name="favorited_text">您已收藏</string>
    <string name="favorited">收藏成功</string>
    <string name="replay_text"></string>
    <string name="replayed_text">您已评论过了</string>
    <string name="idea_comment">评论</string>
    <string name="creative_detail">创意详情</string>
    <string name="votable_num">0</string>
    <string name="vote_list">voteList</string>
    <!--<string name="collect_details">collectDetails</string>-->
    <string name="collect_details">/main/getCreateInfo</string>
    <!-- 我的收藏 -->
    <string name="my_collect">myCollect</string>
    <string name="add_comment">commentAdd</string>
    <string name="delete_favorite">collectDelete</string>
    <string name="delete_message">messageDelete</string>

    <!-- 投票 -->
    <string name="do_vote">voteClick</string>
    <string name="do_collect">collectClick</string>
    <string name="do_praise">praiseClick</string>
    <string name="do_replay">praiseClick</string>
    <!-- 用户反馈 -->
    <string name="feedback">addFeedback</string>
    <!-- 获取广图片 -->
    <!--<string name="get_banner">getBanner</string>-->
    <string name="get_banner">/image/getImages</string>
    <string name="comment_delete">commentDelete</string>
    <string name="comment_reply">commentReply</string>
    <!-- 提交反馈信息 -->
    <string name="add_feedback"></string>
    <!-- 我的消息 -->
   <!-- <string name="message_list">msgList</string>-->
    <string name="message_list">/mess/getMessageByuid</string>
    <!-- 我的创意 -->
    <string name="my_creative">myCreative</string>
    <string name="modify_thumb">updateMyPhoto</string>
    <string name="pull_to_refresh_pull_label">Pull to refresh&#8230;</string>
    <string name="pull_to_refresh_release_label">Release to refresh&#8230;</string>
    <string name="pull_to_refresh_refreshing_label">Loading&#8230;</string>
    <string name="pull_to_refresh_tap_label">Tap to refresh&#8230;</string>
    <string name="loading_more">正在加载更多...</string>
    <string name="weibo_oauth_regiseter">应用授权</string>
    <string name="website">http://www.shareSDK.cn</string>
    <string name="weibo_upload_content">分享图片</string>
    <string name="wechat_client_inavailable">目前您的微信版本过低或未安装微信，需要安装微信才能使用</string>
    <string name="google_plus_client_inavailable">Google+ 版本过低或者没有安装，需要升级或安装Google+才能使用！</string>
    <string name="qq_client_inavailable">QQ 版本过低或者没有安装，需要升级或安装QQ才能使用！</string>
    <string name="sinaweibo">新浪微博</string>
    <string name="tencentweibo">腾讯微博</string>
    <string name="qzone">QQ空间</string>
    <string name="wechat">微信好友</string>
    <string name="wechatmoments">微信朋友圈</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="renren">Renren</string>
    <string name="kaixin">Kaixin</string>
    <string name="email">Email</string>
    <string name="shortmessage">Short Message</string>
    <string name="sohumicroblog">Sohu Microblog</string>
    <string name="neteasemicroblog">Netease Microblog</string>
    <string name="douban">Douban</string>
    <string name="youdao">Youdao</string>
    <string name="evernote">Evernote</string>
    <string name="linkedin">Linked in</string>
    <string name="googleplus">Google+</string>
    <string name="foursquare">FourSquare</string>
    <string name="qq">QQ</string>
    <string name="sohusuishenkan">Sohu Suishenkan</string>

</resources>