<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/all_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:background="@drawable/top_bar_square">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/center_me"
            android:textColor="#ffffff"
           android:layout_centerInParent="true"
            android:textSize="20sp" />
       	 <ImageView
       	     android:id="@id/share_button"
       	     android:layout_width="wrap_content"
       	     android:layout_height="match_parent"
       	     android:layout_alignParentRight="true"
       	     android:layout_alignParentTop="true"
       	     android:src="@drawable/share_button" />
		</RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >

        <RelativeLayout
            android:id="@id/layout_center_my_info"
            android:layout_width="fill_parent"
            android:layout_height="92dp"
            android:layout_marginBottom="4dip"
            android:layout_marginTop="4dip"
            android:alpha="0.7"
            android:background="@drawable/preference_single_item"
            android:clickable="true"
            android:gravity="center_vertical" >

            <ImageView
                android:id="@id/center_user_image"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_marginLeft="10dip"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/user_img" />

            <TextView
                android:id="@id/center_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dip"
                android:layout_marginTop="14dip"
                android:layout_toRightOf="@id/center_user_image"
                android:text="sfds"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <TextView
                android:id="@id/center_user_point_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/center_user_image"
                android:layout_below="@id/center_user_name"
                android:layout_marginLeft="4dip"
                android:layout_toRightOf="@id/center_user_image"
                android:text="积分 :"
                android:textColor="@color/text_grey"
                android:textSize="14sp" />

            <TextView
                android:id="@id/center_user_point"
                style="@style/center_user_text"
                android:layout_below="@id/center_user_name"
                android:layout_toRightOf="@id/center_user_point_title"
                android:text="12"
                android:textSize="14sp" />

            <TextView
                android:id="@id/center_user_idea_title"
                style="@style/center_user_text"
                android:layout_alignBottom="@id/center_user_image"
                android:layout_below="@id/center_user_name"
                android:layout_marginLeft="20dip"
                android:layout_toRightOf="@id/center_user_point"
                android:text="创意:" />

            <TextView
                android:id="@id/center_user_innovation_num"
                style="@style/center_user_text"
                android:layout_below="@id/center_user_name"
                android:layout_toRightOf="@id/center_user_idea_title"
                android:text="" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerInParent="true"
                android:layout_marginRight="10dip"
                android:adjustViewBounds="true"
                android:scaleType="matrix"
                android:src="@drawable/arrow"
                android:visibility="invisible" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="3"
            android:alpha="0.8"
            android:background="@drawable/ic_preference_single_normal"
            android:orientation="vertical"
            android:padding="1dp" >

            <RelativeLayout
                android:id="@id/layout_center_favorite"
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:alpha="0.8"
                android:background="@drawable/preference_first_item"
                android:clickable="true"
                android:gravity="center_vertical"
                android:padding="2dip" >

                <ImageView
                    android:id="@id/center_user_favorite_icon"
                    style="@style/center_item_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:scaleType="center"
                    android:src="@drawable/center_favorite" />

                <TextView
                    android:id="@id/center_user_favorite_title"
                    style="@style/center_item_other"
                    android:layout_toRightOf="@id/center_user_favorite_icon"
                    android:text="@string/my_favorite" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dip"
                    android:scaleType="matrix"
                    android:src="@drawable/arrow" />
            </RelativeLayout>

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:src="#dcdcdc" />

            <RelativeLayout
                android:id="@id/layout_center_message"
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:alpha="0.8"
                android:background="@drawable/preference_item"
                android:clickable="true"
                android:gravity="center_vertical"
                android:padding="2dip" >

                <ImageView
                    android:id="@id/center_user_message_icon"
                    style="@style/center_item_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:scaleType="center"
                    android:src="@drawable/center_message" />

                <TextView
                    android:id="@id/center_user_message_title"
                    style="@style/center_item_other"
                    android:layout_toRightOf="@id/center_user_message_icon"
                    android:text="@string/my_message" />

                <FrameLayout
                    android:id="@id/layout_fragment_center_message_num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toLeftOf="@id/arrow"
                    android:visibility="invisible" >

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:src="@drawable/notification" />

                    <TextView
                        android:id="@id/fragment_center_message_num"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="10"
                        android:textColor="@color/text_white"
                        android:textSize="10dip" />
                </FrameLayout>

                <ImageView
                    android:id="@id/arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dip"
                    android:adjustViewBounds="true"
                    android:scaleType="center"
                    android:src="@drawable/arrow" />
            </RelativeLayout>

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:src="#dcdcdc" />

            <RelativeLayout
                android:id="@id/layout_center_my_innovation"
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:layout_weight="1"
                android:alpha="0.8"
                android:background="@drawable/preference_last_item"
                android:clickable="true"
                android:gravity="center_vertical"
                android:padding="2dip" >

                <ImageView
                    android:id="@id/center_user_innovation_icon"
                    style="@style/center_item_img"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:scaleType="center"
                    android:src="@drawable/center_innovation" />

                <TextView
                    android:id="@id/center_user_innovation_title"
                    style="@style/center_item_other"
                    android:layout_toRightOf="@id/center_user_innovation_icon"
                    android:text="@string/my_innovation" />

                <ImageView
                    android:id="@id/arrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10dip"
                    android:adjustViewBounds="true"
                    android:scaleType="center"
                    android:src="@drawable/arrow" />
            </RelativeLayout>
        </LinearLayout>

        <!-- ******************************************************************** -->

        <RelativeLayout
            android:id="@id/layout_center_setting"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:alpha="0.8"
            android:background="@drawable/preference_single_item"
            android:clickable="true"
            android:gravity="center_vertical"
            android:padding="2dip" >

            <ImageView
                android:id="@id/center_user_setting_icon"
                style="@style/center_item_img"
                android:adjustViewBounds="true"
                android:scaleType="center"
                android:src="@drawable/center_setting" />

            <TextView
                android:id="@id/center_user_setting_title"
                style="@style/center_item_other"
                android:layout_toRightOf="@id/center_user_setting_icon"
                android:text="@string/user_setting" />

            <ImageView
                android:id="@id/fragment_innovation_new"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/arrow"
                android:padding="4dip"
                android:src="@drawable/message_new"
                android:visibility="invisible" />

            <ImageView
                android:id="@id/arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dip"
                android:adjustViewBounds="true"
                android:scaleType="center"
                android:src="@drawable/arrow" />
        </RelativeLayout>

        <!-- *********************************************************************** -->

        <RelativeLayout
            android:id="@id/layout_center_exit"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_marginTop="4dp"
            android:layout_weight="1"
            android:alpha="0.8"
            android:background="@drawable/preference_single_item"
            android:clickable="true"
            android:gravity="center_vertical"
            android:padding="2dip" >

            <ImageView
                android:id="@id/center_user_exit_icon"
                style="@style/center_item_img"
                android:adjustViewBounds="true"
                android:scaleType="center"
                android:src="@drawable/center_exit" />

            <TextView
                android:id="@id/center_user_exit_title"
                style="@style/center_item_other"
                android:layout_toRightOf="@id/center_user_exit_icon"
                android:text="@string/user_exit" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dip"
                android:adjustViewBounds="true"
                android:scaleType="center"
                android:src="@drawable/arrow"
                android:visibility="invisible" />
        </RelativeLayout>
        <!-- *********************************************************************** -->

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="5" >

            <TextView
                android:id="@id/center_current_version"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:onClick="exit_settings"
                android:padding="4dp"
                android:textColor="#fff"
                android:textSize="14sp" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>